array.island.Island.scala.error
Compilation error:
Island:28: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var tailletr : Int
      ^Island:28: error: local variables must be initialized
  var tailletr : Int
      ^Island:30: error: not found: value taille
  while (debut+taille < num.size){
               ^Island:39: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                         ^Island:39: error: not found: type int
    var montagne : Array[int] = new Array[int](tailletr)
                                          ^